fix some responses status on rest api
