# cookbook-server/controllers/user/friend/index.ts
@@ -41,9 +41,12 @@ export function request_friendship(req, res){
                 others: (decodedToken => decodedToken._id === id)
             })
     if(decodedToken) {
-        Friend.exists({from: id, to: decodedToken._id})
+        // Friend.exists({from: id, to: decodedToken._id})
+        Friend.findOne()
+              .where('from').equals(id)
+              .where('to').equals(decodedToken._id)
               .then((result) => {
-                  if(result) return res.status(409).json({description: 'Request has already been exist. '})
+                  if(result) return res.status(409).json({description: 'Request has already been exist. ', actualState: result.state})
 
                   existById(User, [id, decodedToken._id])
                       .then(() => {
@@ -157,7 +160,7 @@ export function update_friendship(req, res){
                   if(!friendship) return res.status(404).json('FriendShip is not found.')
 
                   if(!FriendShip.State.isPending(friendship.state))
-                      return res.status(409).json({ description: 'State friendship has already been changed.'})
+                      return res.status(409).json({ description: 'State friendship has already been changed.', actualState: friendship.state})
 
                   friendship.state = state
                   friendship.updatedAt = Date.now()
